[package]
name = "qrforge"
version = "0.2.39"
authors = ["Sam Schlinkert <sschlinkert@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/sts10/qr-forge"
readme = "README.markdown"
description = "Safely transform between 32-character TOTP secret keys and their QR codes"

[dependencies]
qrcode = "0.14.0"
image = "0.25.1"
chrono = "0.4.38"
rpassword = "7.3.1"
data-encoding = "2.6.0"
sha1 = "0.10.6"
hmac = "0.12.1"
byteorder = "1.5.0"
quirc = "0.0.1"
clap = { version = "4.5.8", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = true
